js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/method-outter-call-expression-this.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
m
(
)
{
class
Outter
{
#
x
=
42
;
}
this
.
#
x
;
}
}
;
